# Newtonian-Gravity-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/SDLWrapper/: BodyWrapper.h  Button.h  SDLWrapper.h  Screen.h  TextBox.h  VectorPreview.h  shapeTextureWrapper.h  textureWrapper.h
include/Simulations/: AbstractSimulation.h  AdvancedSimulation.h  BasicSimulation.h  Body.h
src/: main.cpp
src/SDLWrapper/: Button.cpp  SDLWrapper.cpp  Screen.cpp  TextBox.cpp  VectorPreview.cpp  shapeTexture.cpp  textureWrapper.cpp
src/Simulations/: AbstractSimulation.cpp  AdvancedSimulation.cpp  BasicSimulation.cpp  Body.cpp
